Assertion failure: (typeOffset % eArray == 0) && (typeOffset / eArray <= 2), at /builds/worker/checkouts/gecko/dom/indexedDB/Key.cpp:238
Categories
(Core :: Storage: IndexedDB, defect, P3)
Tracking
()
People
(Reporter: jkratzer, Assigned: sg)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed])
Attachments
(3 files, 2 obsolete files)
887 bytes,
text/html
|
Details | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
Testcase found while fuzzing mozilla-central rev cfa4bd8e6f78 (built with --enable-debug).
Assertion failure: (typeOffset % eArray == 0) && (typeOffset / eArray <= 2), at /builds/worker/checkouts/gecko/dom/indexedDB/Key.cpp:238
rax = 0x00007f8924bac177 rdx = 0x0000000000000000
rcx = 0x00005599958bba58 rbx = 0x00007ffdb1c220e8
rsi = 0x00007f8935bcc8b0 rdi = 0x00007f8935bcb680
rbp = 0x00007ffdb1c21fe0 rsp = 0x00007ffdb1c21f60
r8 = 0x00007f8935bcc8b0 r9 = 0x00007f8936d32780
r10 = 0x0000000000000002 r11 = 0x0000000000000000
r12 = 0xaaaaaaaaaaaaaaaa r13 = 0x000055999767288f
r14 = 0x0000000000000013 r15 = 0x000055999767298f
rip = 0x00007f891eedc580
OS|Linux|0.0.0 Linux 5.3.0-51-generic #44~18.04.2-Ubuntu SMP Thu Apr 23 14:27:18 UTC 2020 x86_64
CPU|amd64|family 6 model 94 stepping 3|8
GPU|||
Crash|SIGSEGV|0x0|0
0|0|libxul.so|mozilla::dom::indexedDB::Key::ToLocaleAwareKey(mozilla::dom::indexedDB::Key&, nsTString<char> const&, mozilla::ErrorResult&) const|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/Key.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|238|0x0
0|1|libxul.so|mozilla::dom::(anonymous namespace)::MakeIndexUpdateInfo(long, mozilla::dom::indexedDB::Key const&, nsTString<char> const&, mozilla::ErrorResult*)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/IDBObjectStore.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|69|0x15
0|2|libxul.so|mozilla::dom::IDBObjectStore::AppendIndexUpdateInfo(long, mozilla::dom::indexedDB::KeyPath const&, bool, nsTString<char> const&, JSContext*, JS::Handle<JS::Value>, nsTArray<mozilla::dom::indexedDB::IndexUpdateInfo>*, mozilla::ErrorResult*)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/IDBObjectStore.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|521|0x16
0|3|libxul.so|mozilla::dom::IDBObjectStore::GetAddInfo(JSContext*, mozilla::dom::IDBObjectStore::ValueWrapper&, JS::Handle<JS::Value>, mozilla::dom::IDBObjectStore::StructuredCloneWriteInfo&, mozilla::dom::indexedDB::Key&, nsTArray<mozilla::dom::indexedDB::IndexUpdateInfo>&, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/IDBObjectStore.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|712|0x10
0|4|libxul.so|mozilla::dom::IDBObjectStore::AddOrPut(JSContext*, mozilla::dom::IDBObjectStore::ValueWrapper&, JS::Handle<JS::Value>, bool, bool, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/IDBObjectStore.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|772|0x2a
0|5|libxul.so|mozilla::dom::IDBObjectStore::Put(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/IDBObjectStore.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1021|0x20
0|6|libxul.so|mozilla::dom::IDBObjectStore_Binding::put(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&)|s3:gecko-generated-sources:ad112e758790aa0777e9b2114eba439edc54bb393cfd20825f639a5f680c951c24f1faf85ce149909566546ff1a243d99c42d590beeff910abf352913eebaa5a/dom/bindings/IDBObjectStoreBinding.cpp:|411|0x2c
0|7|libxul.so|bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|3192|0x21
0|8|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|493|0x12
0|9|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|585|0xe
0|10|libxul.so|Interpret(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|652|0xa
0|11|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|465|0xb
0|12|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|620|0x8
0|13|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|665|0xb
0|14|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|2840|0x23
0|15|libxul.so|mozilla::dom::EventHandlerNonNull::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&)|s3:gecko-generated-sources:5ceb4fd1d8dc61bfa9cb634c1ccbea88477929f8e3cd832f14dbaaa72fb11378c7536241ae3f9b1a6d2506d829d115fe64e0fdcf3301157cfcf64f24a4f984df/dom/bindings/EventHandlerBinding.cpp:|276|0xb
0|16|libxul.so|void mozilla::dom::EventHandlerNonNull::Call<nsCOMPtr<mozilla::dom::EventTarget> >(nsCOMPtr<mozilla::dom::EventTarget> const&, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:5abc72777d30ad0ea7b8b3e1392cd7961bd73b8cd08e5ab209f3b42251def563ee9c9a7cea98a24d0fa9d867edfc0c0297c165b0d167458ac5a2af4b7a0caebe/dist/include/mozilla/dom/EventHandlerBinding.h:|367|0x28
0|17|libxul.so|mozilla::JSEventHandler::HandleEvent(mozilla::dom::Event*)|hg:hg.mozilla.org/mozilla-central:dom/events/JSEventHandler.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|201|0x2e
0|18|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1088|0xc
0|19|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1280|0x16
0|20|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|356|0xb
0|21|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|558|0x19
0|22|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1055|0x5
0|23|libxul.so|mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|0|0x8
0|24|libxul.so|mozilla::DOMEventTargetHelper::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/events/DOMEventTargetHelper.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|145|0xc
0|25|libxul.so|mozilla::dom::EventTarget::DispatchEvent(mozilla::dom::Event&, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventTarget.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|184|0x33
0|26|libxul.so|mozilla::dom::indexedDB::(anonymous namespace)::detail::DispatchSuccessEvent(RefPtr<mozilla::dom::IDBRequest> const&, mozilla::SafeRefPtr<mozilla::dom::IDBTransaction> const&, RefPtr<mozilla::dom::Event> const&)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/ActorsChild.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|632|0xe
0|27|libxul.so|void mozilla::dom::indexedDB::(anonymous namespace)::SetResultAndDispatchSuccessEvent<mozilla::dom::IDBDatabase>(RefPtr<mozilla::dom::IDBRequest> const&, mozilla::SafeRefPtr<mozilla::dom::IDBTransaction> const&, mozilla::dom::IDBDatabase*, RefPtr<mozilla::dom::Event>)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/ActorsChild.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|606|0x8
0|28|libxul.so|mozilla::dom::indexedDB::BackgroundDatabaseChild::RecvPBackgroundIDBVersionChangeTransactionConstructor(mozilla::dom::indexedDB::PBackgroundIDBVersionChangeTransactionChild*, unsigned long const&, unsigned long const&, long const&, long const&)|hg:hg.mozilla.org/mozilla-central:dom/indexedDB/ActorsChild.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1747|0x8
0|29|libxul.so|mozilla::dom::indexedDB::PBackgroundIDBDatabaseChild::OnMessageReceived(IPC::Message const&)|s3:gecko-generated-sources:2ad87b60434df00e11eab33b78feaf68c78ffef7d53b0eeb20de8c908a2a96c14455f2eecd205ea9ae779d1a8b372e8bf920b856dd5dd45b6ef96cf38be99491/ipc/ipdl/PBackgroundIDBDatabaseChild.cpp:|884|0x24
0|30|libxul.so|mozilla::ipc::PBackgroundChild::OnMessageReceived(IPC::Message const&)|s3:gecko-generated-sources:75695bbbf1ec93aad4718f03c359901f1be9ae34cba79945a5c42f3e8a2da054cc4ed1a56d373be9953080b82b366a6cd792a7b5323cd7f0d62bfa3c3b040098/ipc/ipdl/PBackgroundChild.cpp:|6083|0x24
0|31|libxul.so|mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|2190|0x1c
0|32|libxul.so|mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|2114|0x12
0|33|libxul.so|mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1962|0xb
0|34|libxul.so|mozilla::ipc::MessageChannel::MessageTask::Run()|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1993|0x12
0|35|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|146|0x11
0|36|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|1211|0x11
0|37|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|501|0xc
0|38|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|87|0x7
0|39|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|315|0x17
0|40|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|290|0x8
0|41|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|137|0xd
0|42|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|913|0xe
0|43|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|237|0x5
0|44|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|315|0x17
0|45|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|290|0x8
0|46|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|744|0x5
0|47|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|56|0x11
0|48|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|303|0x20
0|49|libc.so.6||||0x21b97
0|50|firefox-bin|<name omitted>|hg:hg.mozilla.org/mozilla-central:mfbt/UniquePtr.h:cfa4bd8e6f789fcca1de2272f0d5b11c0ded913f|253|0x17
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
I reproduced this and have a Pernosco session at https://pernos.co/debug/4xUc_yGi3sI8FVa70Qj6vw/index.html#f{m[2jg,HZw4_,t[AQ,OZM_,f{e[2jg,F4z4_,s{af2Y8dGAA,bAYU,oGVdPgg,uGTtGPw___
Reporter | ||
Updated•5 years ago
|
Reporter | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
I reduced the regression range further to just this patch: https://hg.mozilla.org/integration/autoland/rev/3c4a84ec8b3a6d8185a57cdeaa68e45c0af87a31
Assignee | ||
Comment 4•5 years ago
|
||
Assignee | ||
Comment 5•5 years ago
|
||
Depends on D78696
Assignee | ||
Comment 6•5 years ago
|
||
Assignee | ||
Comment 7•5 years ago
|
||
Depends on D78707
Comment 8•5 years ago
|
||
Comment on attachment 9154975 [details]
Bug 1641598 - Change IDBResult(Base) to contain the ErrorResult. r=#dom-workers-and-storage
Revision D78707 was moved to bug 1644379. Setting attachment 9154975 [details] to obsolete.
Comment 9•5 years ago
|
||
Comment on attachment 9154976 [details]
Bug 1641598 - Extract extraction of ErrorResult from IDBResult into a function. r=#dom-workers-and-storage
Revision D78708 was moved to bug 1644379. Setting attachment 9154976 [details] to obsolete.
Assignee | ||
Updated•5 years ago
|
Comment 10•5 years ago
|
||
![]() |
||
Comment 11•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/cf41b31f741b
https://hg.mozilla.org/mozilla-central/rev/0cb8828f2dd5
Updated•5 years ago
|
Updated•5 years ago
|
Reporter | ||
Updated•5 years ago
|
Reporter | ||
Comment 12•5 years ago
|
||
Updated•5 years ago
|
Comment 13•5 years ago
|
||
The patch landed in nightly and beta is affected.
:sg, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 14•5 years ago
|
||
Comment on attachment 9154952 [details]
Bug 1641598 - Fix defect in Key::LengthOfEncodedBinary. r=#dom-workers-and-storage
Beta/Release Uplift Approval Request
- User impact if declined: Locale-aware indexes may be broken, which is a Firefox/Gecko-only feature that is apparently not widely used.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The fix only affects locale-aware indexes, and has been verified in nightly. The other patch on this bug contains gtests that verify it, and could be uplifted as well, not affecting production code.
- String changes made/needed:
Assignee | ||
Updated•5 years ago
|
Comment 15•5 years ago
|
||
Comment on attachment 9154952 [details]
Bug 1641598 - Fix defect in Key::LengthOfEncodedBinary. r=#dom-workers-and-storage
Approved for 79.0b3.
Updated•5 years ago
|
Comment 16•5 years ago
|
||
bugherder uplift |
Assignee | ||
Comment 18•5 years ago
|
||
Comment on attachment 9154952 [details]
Bug 1641598 - Fix defect in Key::LengthOfEncodedBinary. r=#dom-workers-and-storage
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: While it doesn't seem to have affected existing Release users much, as the regression was not reported for several months before the fuzzer identified it, the ESR user population might be different and rely more on locale-aware IndexedDB indexes, so it would be good to fix this.
- User impact if declined: Locale-aware indexes may be broken.
- Fix Landed on Version: 79
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The fix only affects locale-aware indexes, and has been verified in nightly. The other patch on this bug contains gtests that verify it, and could be uplifted as well, not affecting production code.
- String or UUID changes made by this patch:
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 19•5 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #17)
Is this something we'd want on ESR78 as well?
Yes, probably. I requested uplift. Thanks for the heads-up!
Comment 20•5 years ago
|
||
Comment on attachment 9154952 [details]
Bug 1641598 - Fix defect in Key::LengthOfEncodedBinary. r=#dom-workers-and-storage
Approved for 78.1esr.
Updated•5 years ago
|
Comment 21•5 years ago
|
||
bugherder uplift |
Reporter | ||
Updated•5 years ago
|
Description
•