Bug 1641598 - Fix defect in Key::LengthOfEncodedBinary. r=ttung, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D78696